// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkDismissibleChip dark mode should render correctly 1`] = `
<View
  accessibilityLabel="Dismiss"
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(36, 51, 70)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
          "shadowColor": "rgb(22, 22, 22)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
      ],
      Array [],
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.154,
          "textAlign": "left",
        },
        Object {},
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "includeFontPadding": false,
          },
          Object {
            "marginEnd": 4,
          },
        ],
      ]
    }
  >
    Label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "includeFontPadding": false,
          },
        ],
      ]
    }
  >
    
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 40,
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkDismissibleChip dark mode should render correctly with "disabled" 1`] = `
<View
  accessibilityLabel="Dismiss"
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(36, 51, 70)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
          "shadowColor": "rgb(22, 22, 22)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
        Object {
          "backgroundColor": "rgb(11, 18, 29)",
        },
      ],
      Array [],
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.154,
          "textAlign": "left",
        },
        Object {},
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "includeFontPadding": false,
          },
          Object {
            "color": "rgba(255, 255, 255, 0.2)",
          },
          Object {
            "marginEnd": 4,
          },
        ],
      ]
    }
  >
    Label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "includeFontPadding": false,
          },
          Object {
            "color": "rgba(255, 255, 255, 0.2)",
          },
        ],
      ]
    }
  >
    
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 40,
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkDismissibleChip dark mode should render outline correctly 1`] = `
<View
  accessibilityLabel="Dismiss"
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(36, 51, 70)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
          "shadowColor": "rgb(22, 22, 22)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
        Object {
          "backgroundColor": "rgb(36, 51, 70)",
          "paddingVertical": 7,
        },
      ],
      Array [
        Object {
          "elevation": 0,
        },
      ],
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.154,
          "textAlign": "left",
        },
        Object {},
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "includeFontPadding": false,
          },
          Object {
            "color": "rgb(255, 255, 255)",
          },
          Object {
            "marginEnd": 4,
          },
        ],
      ]
    }
  >
    Label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "includeFontPadding": false,
          },
          Object {
            "color": "rgb(255, 255, 255)",
          },
        ],
      ]
    }
  >
    
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 40,
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkDismissibleChip light mode should render correctly 1`] = `
<View
  accessibilityLabel="Dismiss"
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(224, 227, 229)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
          "shadowColor": "rgb(22, 22, 22)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
      ],
      Array [],
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.154,
          "textAlign": "left",
        },
        Object {},
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "includeFontPadding": false,
          },
          Object {
            "marginEnd": 4,
          },
        ],
      ]
    }
  >
    Label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "includeFontPadding": false,
          },
        ],
      ]
    }
  >
    
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(22, 22, 22)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 40,
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkDismissibleChip light mode should render correctly with "disabled" 1`] = `
<View
  accessibilityLabel="Dismiss"
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(224, 227, 229)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
          "shadowColor": "rgb(22, 22, 22)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
        Object {
          "backgroundColor": "rgb(224, 227, 229)",
        },
      ],
      Array [],
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.154,
          "textAlign": "left",
        },
        Object {},
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "includeFontPadding": false,
          },
          Object {
            "color": "rgba(0, 0, 0, 0.2)",
          },
          Object {
            "marginEnd": 4,
          },
        ],
      ]
    }
  >
    Label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "includeFontPadding": false,
          },
          Object {
            "color": "rgba(0, 0, 0, 0.2)",
          },
        ],
      ]
    }
  >
    
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(22, 22, 22)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 40,
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkDismissibleChip light mode should render outline correctly 1`] = `
<View
  accessibilityLabel="Dismiss"
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(224, 227, 229)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
          "shadowColor": "rgb(22, 22, 22)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
        Object {
          "backgroundColor": "rgba(255, 255, 255, 0.2)",
          "paddingVertical": 7,
        },
      ],
      Array [
        Object {
          "elevation": 0,
        },
      ],
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.154,
          "textAlign": "left",
        },
        Object {},
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "includeFontPadding": false,
          },
          Object {
            "color": "rgb(255, 255, 255)",
          },
          Object {
            "marginEnd": 4,
          },
        ],
      ]
    }
  >
    Label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "includeFontPadding": false,
          },
          Object {
            "color": "rgb(255, 255, 255)",
          },
        ],
      ]
    }
  >
    
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(22, 22, 22)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 40,
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkDismissibleChip should render correctly with a supplied icon 1`] = `
<View
  accessibilityLabel="Dismiss"
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(224, 227, 229)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
          "shadowColor": "rgb(22, 22, 22)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
      ],
      Array [],
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "includeFontPadding": false,
          },
        ],
      ]
    }
  >
    
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.154,
          "textAlign": "left",
        },
        Object {},
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "includeFontPadding": false,
          },
          Object {
            "marginStart": 4,
          },
          Object {
            "marginEnd": 4,
          },
        ],
      ]
    }
  >
    Label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "includeFontPadding": false,
          },
          Object {
            "marginStart": 4,
          },
        ],
      ]
    }
  >
    
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(22, 22, 22)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 40,
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkDismissibleChip should render correctly with arbitrary props 1`] = `
<View
  accessibilityLabel="Dismiss"
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(224, 227, 229)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
          "shadowColor": "rgb(22, 22, 22)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
      ],
      Array [],
    ]
  }
  testID="123"
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.154,
          "textAlign": "left",
        },
        Object {},
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "includeFontPadding": false,
          },
          Object {
            "marginEnd": 4,
          },
        ],
      ]
    }
  >
    Label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "includeFontPadding": false,
          },
        ],
      ]
    }
  >
    
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(22, 22, 22)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 40,
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkDismissibleChip should render correctly with custom style 1`] = `
<View
  accessibilityLabel="Dismiss"
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(224, 227, 229)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
          "shadowColor": "rgb(22, 22, 22)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
        Object {
          "backgroundColor": "red",
        },
      ],
      Array [
        Object {
          "flex": 1,
        },
      ],
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.154,
          "textAlign": "left",
        },
        Object {},
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "includeFontPadding": false,
          },
          Object {
            "marginEnd": 4,
          },
        ],
      ]
    }
  >
    Label
  </Text>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(22, 22, 22)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "color": "rgb(22, 22, 22)",
            "includeFontPadding": false,
          },
        ],
      ]
    }
  >
    
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(22, 22, 22)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 40,
        },
      ]
    }
  />
</View>
`;
